Reorder info cards and update mobile image sizing
- Moved Collaborative Care Culture to second position in info cards
- Changed Real Patient Impact to third position
- Updated mobile image height to auto for full-width display

--- a/index.html
+++ b/index.html
@@ -128,41 +128,8 @@
                 </div>
             </article>
 
-            <!-- Card 2: Real Patient Impact -->
-            <article class="info-card info-card--sage info-card--reverse">
-                <div class="info-card__content">
-                    <h3 class="info-card__title">Real Patient Impact</h3>
-                    <p class="info-card__description">Develop meaningful relationships and stronger bonds with the people you serve, while witnessing firsthand the impact of your work over time.</p>
-                    <button class="info-card__cta" data-faq="patient-impact" aria-expanded="false">
-                        <span>FAQs</span>
-                        <span class="info-card__cta-icon">+</span>
-                    </button>
-                </div>
-                <div class="info-card__image">
-                    <picture>
-                        <source srcset="assets/images/patient-impact.webp" type="image/webp">
-                        <img src="assets/images/patient-impact.jpg" alt="Patient and caregiver interaction">
-                    </picture>
-                </div>
-                <!-- FAQ Content (Hidden in DOM for accessibility/SEO) -->
-                <div class="faq-content__section" data-faq-type="patient-impact" style="display: none;">
-                    <h3 class="faq-content__title">Real Patient Impact</h3>
-                    <p class="faq-content__description">Develop meaningful relationships and stronger bonds with the people you serve, while witnessing firsthand the impact of your work over time.</p>
-                    <div class="faq-content__items">
-                        <div class="faq-content__item">
-                            <h4 class="faq-content__question">How do I build relationships with patients?</h4>
-                            <p class="faq-content__answer">Through consistent visits and personalized care plans, you develop deep understanding of patient needs and preferences, creating lasting bonds.</p>
-                        </div>
-                        <div class="faq-content__item">
-                            <h4 class="faq-content__question">What outcomes can I expect to see?</h4>
-                            <p class="faq-content__answer">You will witness tangible improvements in patient health, independence, and quality of life as you provide ongoing support in their home environment.</p>
-                        </div>
-                    </div>
-                </div>
-            </article>
-
-            <!-- Card 3: Collaborative Care Culture -->
-            <article class="info-card info-card--peach">
+            <!-- Card 2: Collaborative Care Culture -->
+            <article class="info-card info-card--peach info-card--reverse">
                 <div class="info-card__content">
                     <h3 class="info-card__title">Collaborative Care Culture</h3>
                     <p class="info-card__description">Work with colleagues who share your passion and purpose, and lean on an integrated team of healthcare professionals who empower patient care.</p>
@@ -189,6 +156,39 @@
                         <div class="faq-content__item">
                             <h4 class="faq-content__question">How does team collaboration work?</h4>
                             <p class="faq-content__answer">Regular communication, care coordination meetings, and shared care plans ensure everyone is aligned on patient goals and treatment approaches.</p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Card 3: Real Patient Impact -->
+            <article class="info-card info-card--sage">
+                <div class="info-card__content">
+                    <h3 class="info-card__title">Real Patient Impact</h3>
+                    <p class="info-card__description">Develop meaningful relationships and stronger bonds with the people you serve, while witnessing firsthand the impact of your work over time.</p>
+                    <button class="info-card__cta" data-faq="patient-impact" aria-expanded="false">
+                        <span>FAQs</span>
+                        <span class="info-card__cta-icon">+</span>
+                    </button>
+                </div>
+                <div class="info-card__image">
+                    <picture>
+                        <source srcset="assets/images/patient-impact.webp" type="image/webp">
+                        <img src="assets/images/patient-impact.jpg" alt="Patient and caregiver interaction">
+                    </picture>
+                </div>
+                <!-- FAQ Content (Hidden in DOM for accessibility/SEO) -->
+                <div class="faq-content__section" data-faq-type="patient-impact" style="display: none;">
+                    <h3 class="faq-content__title">Real Patient Impact</h3>
+                    <p class="faq-content__description">Develop meaningful relationships and stronger bonds with the people you serve, while witnessing firsthand the impact of your work over time.</p>
+                    <div class="faq-content__items">
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">How do I build relationships with patients?</h4>
+                            <p class="faq-content__answer">Through consistent visits and personalized care plans, you develop deep understanding of patient needs and preferences, creating lasting bonds.</p>
+                        </div>
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">What outcomes can I expect to see?</h4>
+                            <p class="faq-content__answer">You will witness tangible improvements in patient health, independence, and quality of life as you provide ongoing support in their home environment.</p>
                         </div>
                     </div>
                 </div>
