Update FAQ modal spacing and add email hyperlink
- Reduced margin between FAQ modal title and description from 32px to 10px
- Added hyperlink to email address in contact section description

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             </div>
             <div class="contact__content">
                 <h2 class="contact__title">Get in touch</h2>
-                <p class="contact__description">Whether you have questions about care at home or are ready to make a career change, <strong>feel free to email us at communications@allianceforcareathome.org</strong></p>
+                <p class="contact__description">Whether you have questions about care at home or are ready to make a career change, <strong>feel free to email us at <a href="mailto:communications@allianceforcareathome.org">communications@allianceforcareathome.org</a></strong></p>
                 <a href="mailto:communications@allianceforcareathome.org" class="contact__button">email us</a>
             </div>
         </section>
