--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     <!-- Footer -->
     <footer class="footer">
         <img src="assets/images/alliance-logo-navy.svg" alt="National Alliance for Care at Home" class="footer__logo">
-        <p class="footer__copyright">&copy; National Alliance for Care at Home, 2025    |     <a href="#" class="footer__link">Privacy Policy</a></p>
+        <p class="footer__copyright">&copy; National Alliance for Care at Home, 2025    |     <a href="https://allianceforcareathome.org/about/privacy-policy/" class="footer__link" target="_blank" rel="noopener noreferrer">Privacy Policy</a></p>
     </footer>
 
     <!-- Video Modal -->
