Update info-card styling and testimonial content
- Vertically center content in info-cards
- Adjust info-card proportions for better balance
- Reduce image height from 524px to 460px
- Update content and image max-width to 490px
- Move border-radius to img element for better control
- Fix testimonial card titles (remove Lorem Ipsum placeholders)

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             </button>
                             <div class="testimonial-card__info">
                                 <h3 class="testimonial-card__name">Laura Ehrich</h3>
-                                <p class="testimonial-card__title">Lorem Ipsum</p>
+                                <p class="testimonial-card__title">Care at Home Advocate and Leader</p>
                             </div>
                         </article>
 
@@ -314,7 +314,7 @@
                             </button>
                             <div class="testimonial-card__info">
                                 <h3 class="testimonial-card__name">Raianne Melton</h3>
-                                <p class="testimonial-card__title">Lorem Ipsum</p>
+                                <p class="testimonial-card__title">Registered Nurse and Technology Leader</p>
                             </div>
                         </article>
 
@@ -330,8 +330,8 @@
                                 <span>watch</span>
                             </button>
                             <div class="testimonial-card__info">
-                                <h3 class="testimonial-card__name">Sarah Payne</h3>
-                                <p class="testimonial-card__title">Lorem Ipsum</p>
+                                <h3 class="testimonial-card__name">Dr. Sarah Payne</h3>
+                                <p class="testimonial-card__title">Hospice Medical Director</p>
                             </div>
                         </article>
                     </div>
