Add SVG quote graphic and remove unused font variable
Replaced text quote mark with gradient SVG graphic in quote section.
Removed unused $font-secondary variable (Italiana font).

--- a/index.html
+++ b/index.html
@@ -177,7 +177,17 @@
         <!-- Quote Section -->
         <section class="quote">
             <div class="container">
-                <div class="quote__mark">"</div>
+                <div class="quote__mark">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="38" height="37" viewBox="0 0 38 37" fill="none">
+                        <path d="M38 37H22.8V20.276C22.8 9.176 27.6231 2.22 38 0V9.32399C34.4923 10.508 32.5923 12.136 32.5923 18.944H38V37ZM15.2 37H0V20.276C0 9.176 4.82308 2.22 15.2 0V9.32399C11.6923 10.508 9.79231 12.136 9.79231 18.944H15.2V37Z" fill="url(#paint0_linear_41_116)"/>
+                        <defs>
+                            <linearGradient id="paint0_linear_41_116" x1="4.77513" y1="34.1581" x2="35.2323" y2="27.1609" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#5D113C"/>
+                                <stop offset="1" stop-color="#743458"/>
+                            </linearGradient>
+                        </defs>
+                    </svg>
+                </div>
                 <blockquote class="quote__text">Home care empowers people to live with agency to make choices based on their desires.</blockquote>
                 <cite class="quote__author">
                     <span class="quote__author-name">Laura Ehrich</span>
