Add resources section content and improve contact layout
Updated resources section with real content:
- Career Resources: Hospice/Palliative Care overview, Career Center, Find a Provider
- Nursing Education & Professional Networks: AACN, ANA

Improved contact section layout:
- Added padding to content area for better spacing
- Adjusted mobile padding in resources and contact sections
- Added inline-block display to email link for better line wrapping

--- a/index.html
+++ b/index.html
@@ -316,72 +316,42 @@
                 <h2 class="resources__title">Explore more with these resources</h2>
 
                 <div class="resources__category">
-                    <h3 class="resources__category-title">Category Name</h3>
+                    <h3 class="resources__category-title">Career Resources</h3>
                     <ul class="resources__list">
                         <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
+                            <a href="https://allianceforcareathome.org/hospice/hospice-and-palliative-care-careers/" class="resources__link">
+                                <span class="resources__link-title">Hospice & Palliative Care Career Overview</span>
+                                <span class="resources__link-description">Learn more about hospice and palliative care careers and get started through the variety of resources available on this page.</span>
                             </a>
                         </li>
                         <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
+                            <a href="https://careers.allianceforcareathome.org" class="resources__link">
+                                <span class="resources__link-title">Alliance Career Center</span>
+                                <span class="resources__link-description">View current job openings in care at home.</span>
                             </a>
                         </li>
                         <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
-                            </a>
-                        </li>
-                        <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
-                            </a>
-                        </li>
-                        <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
+                            <a href="https://allianceforcareathome.org/find-a-provider/" class="resources__link">
+                                <span class="resources__link-title">Find a Provider</span>
+                                <span class="resources__link-description">Use this directory to search for a care at home provider in your area and use the contact information provided to inquire about training or job opportunities.</span>
                             </a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="resources__category">
-                    <h3 class="resources__category-title">Category Name</h3>
+                    <h3 class="resources__category-title">Nursing Education & Professional Networks</h3>
                     <ul class="resources__list">
                         <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
+                            <a href="https://www.aacnnursing.org" class="resources__link">
+                                <span class="resources__link-title">American Association of Colleges of Nursing</span>
+                                <span class="resources__link-description">If you're interested in becoming a nurse or advancing your knowledge, learn more about education and certification opportunities.</span>
                             </a>
                         </li>
                         <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="resources__category">
-                    <h3 class="resources__category-title">Category Name</h3>
-                    <ul class="resources__list">
-                        <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
-                            </a>
-                        </li>
-                        <li class="resources__item">
-                            <a href="#" class="resources__link">
-                                <span class="resources__link-title">Resource link destination</span>
-                                <span class="resources__link-description">Brief description of resource or organization</span>
+                            <a href="https://www.nursingworld.org" class="resources__link">
+                                <span class="resources__link-title">American Nurses Association</span>
+                                <span class="resources__link-description">Already a nurse or close to completing your education? Tap into this professional network to take the next step.</span>
                             </a>
                         </li>
                     </ul>
@@ -398,7 +368,10 @@
             </div>
             <div class="contact__content">
                 <h2 class="contact__title">Get in touch</h2>
-                <p class="contact__description">Whether you have questions about care at home or are ready to make a career change, <strong>feel free to email us at <a href="mailto:communications@allianceforcareathome.org">communications@allianceforcareathome.org</a></strong></p>
+                <p class="contact__description">
+                    Whether you have questions about care at home or are ready to make a career change,
+                    <strong>feel free to email us at <a href="mailto:communications@allianceforcareathome.org">communications&#8203;@allianceforcareathome.org</a></strong>
+                </p>
                 <a href="mailto:communications@allianceforcareathome.org" class="contact__button">email us</a>
             </div>
         </section>
