--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="assets/images/hero-person-right.webp" alt="" class="hero__image hero__image--right">
         </div>
         <div class="hero__content">
-            <img src="assets/images/alliance-logo-white.svg" alt="National Alliance for Care at Home" class="hero__logo">
+            <img src="assets/images/alliance-logo-white.png" alt="National Alliance for Care at Home" class="hero__logo">
             <h1 class="hero__title">Meet patients<br>where they are.</h1>
             <p class="hero__subtitle">At home and along healthcare journeys, you can make a difference in their lives.</p>
         </div>
@@ -381,7 +381,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <img src="assets/images/alliance-logo-navy.svg" alt="National Alliance for Care at Home" class="footer__logo">
+        <img src="assets/images/alliance-logo-navy.png" alt="National Alliance for Care at Home" class="footer__logo">
         <p class="footer__copyright">&copy; National Alliance for Care at Home, 2025    |     <a href="https://allianceforcareathome.org/about/privacy-policy/" class="footer__link" target="_blank" rel="noopener noreferrer">Privacy Policy</a></p>
     </footer>
 
