Update FAQ content with final copy
Update all three FAQ sections with comprehensive, detailed content:
- Dynamic & Fulfilling Work: 3 FAQs covering home visits, hospital nursing differences, and certifications
- Collaborative Care Culture: 3 FAQs covering interdisciplinary teamwork, mentorship support, and real-time communication
- Real Patient Impact: 3 FAQs covering patient types, continuity of care, and unique home visit interactions

--- a/index.html
+++ b/index.html
@@ -83,31 +83,19 @@
                 <!-- FAQ Content (Hidden in DOM for accessibility/SEO) -->
                 <div class="faq-content__section" data-faq-type="dynamic-work" style="display: none;">
                     <h3 class="faq-content__title">Dynamic & Fulfilling Work</h3>
-                    <p class="faq-content__description">Deliver essential care in the setting where patients most want to receive it — at home. Apply your skills with greater autonomy and the chance to learn.</p>
+                    <p class="faq-content__description">Deliver essential care in the setting where patients most want to receive it -- at home. Apply your skills with greater autonomy and the chance to learn.</p>
                     <div class="faq-content__items">
                         <div class="faq-content__item">
-                            <h4 class="faq-content__question">What types of care can I provide at home?</h4>
-                            <p class="faq-content__answer">Home care encompasses a wide range of services including skilled nursing, physical therapy, occupational therapy, speech therapy, medical social services, and personal care assistance.</p>
+                            <h4 class="faq-content__question">What does a typical home visit involve?</h4>
+                            <p class="faq-content__answer">A home visit is designed around a patient's unique needs and care plan but starts with a comprehensive assessment of their physical and emotional status, including monitoring vital signs, managing symptoms, and performing necessary treatments like wound care or medication administration. Caregiver education is also a key part of visits.</p>
                         </div>
                         <div class="faq-content__item">
-                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
-                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
+                            <h4 class="faq-content__question">How does this differ from hospital nursing?</h4>
+                            <p class="faq-content__answer">Hospital nursing is task-oriented and focused on stabilizing acute conditions in a structured environment with a large healthcare team. Home care nursing is patient-centered, focusing on care management, rehabilitation, and patient education in the patient's home. Home care nurses have more autonomy and a one-on-one relationship with patients, while still utilizing the hands-on skills and techniques required in hospital nursing.</p>
                         </div>
                         <div class="faq-content__item">
-                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
-                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction. one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
-                        </div>
-                        <div class="faq-content__item">
-                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
-                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
-                        </div>
-                        <div class="faq-content__item">
-                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
-                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
-                        </div>
-                        <div class="faq-content__item">
-                            <h4 class="faq-content__question">How is home care different from hospital care?</h4>
-                            <p class="faq-content__answer">Home care allows for more personalized, one-on-one patient interaction in a familiar environment, often leading to better patient outcomes and satisfaction.</p>
+                            <h4 class="faq-content__question">Do I need special certifications or training?</h4>
+                            <p class="faq-content__answer">In most home care settings special training is not required beyond a valid nursing license. New care at home nurses receive tailored training and orientation from their organization and the other members of the care team. Additionally, many nursing schools do offer home care-specific training rotations.</p>
                         </div>
                     </div>
                 </div>
@@ -132,12 +120,16 @@
                     <p class="faq-content__description">Work with colleagues who share your passion and purpose, and lean on an integrated team of healthcare professionals who empower patient care.</p>
                     <div class="faq-content__items">
                         <div class="faq-content__item">
-                            <h4 class="faq-content__question">Who will I work with?</h4>
-                            <p class="faq-content__answer">You will collaborate with physicians, nurses, therapists, social workers, and other healthcare professionals as part of an integrated care team.</p>
+                            <h4 class="faq-content__question">How do nurses work with other care at home professionals?</h4>
+                            <p class="faq-content__answer">In home care, nurses are part of an interdisciplinary team that works collaboratively to care for patients, with the nurse often acting as the central point of coordination, communication, and care management.</p>
                         </div>
                         <div class="faq-content__item">
-                            <h4 class="faq-content__question">How does team collaboration work?</h4>
-                            <p class="faq-content__answer">Regular communication, care coordination meetings, and shared care plans ensure everyone is aligned on patient goals and treatment approaches.</p>
+                            <h4 class="faq-content__question">Is there support from supervisors or mentors in the field?</h4>
+                            <p class="faq-content__answer">Home care nurses are surrounded by additional supports on their team, from the training of more experienced nurses to collaborative work with the other disciplines in the field, while nurses maintain their autonomy they are not expected to operate without a support system and proper training.</p>
+                        </div>
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">How is real-time communication handled?</h4>
+                            <p class="faq-content__answer">Real-time communication is primarily handled through telehealth platforms, secure messaging apps, and remote patient monitoring systems. These technologies enable nurses to instantly connect with other healthcare providers and team members, ensuring timely support and coordinated patient care.</p>
                         </div>
                     </div>
                 </div>
@@ -162,12 +154,16 @@
                     <p class="faq-content__description">Develop meaningful relationships and stronger bonds with the people you serve, while witnessing firsthand the impact of your work over time.</p>
                     <div class="faq-content__items">
                         <div class="faq-content__item">
-                            <h4 class="faq-content__question">How do I build relationships with patients?</h4>
-                            <p class="faq-content__answer">Through consistent visits and personalized care plans, you develop deep understanding of patient needs and preferences, creating lasting bonds.</p>
+                            <h4 class="faq-content__question">What kinds of patients receive home-based care?</h4>
+                            <p class="faq-content__answer">Home based care spans a wide array of patient types, from those recovering from acute illness or injury in home health to those living with a terminal illness receiving hospice care. Though many home based care patients are 65 and older, home care also supports pediatric patients and adults of all ages depending on their needs.</p>
                         </div>
                         <div class="faq-content__item">
-                            <h4 class="faq-content__question">What outcomes can I expect to see?</h4>
-                            <p class="faq-content__answer">You will witness tangible improvements in patient health, independence, and quality of life as you provide ongoing support in their home environment.</p>
+                            <h4 class="faq-content__question">Do I see the same patients, or are they always changing?</h4>
+                            <p class="faq-content__answer">Each nurse carries a case load of patients and typically sees the same patients throughout their time receiving home care. This enables nurses to develop meaningful relationships that enable high-quality, individualized care delivery, and instill a greater sense of purpose into each visit. Since some types of home care (i.e. hospice) include 24/7 coverage, nurses may also choose to serve as on-call, admissions, or triage nurses that allow them to see a variety of patients each day.</p>
+                        </div>
+                        <div class="faq-content__item">
+                            <h4 class="faq-content__question">How is patient interaction unique in home visits?</h4>
+                            <p class="faq-content__answer">Patient interaction is unique in home care because nurses and care team members are guests in their patient's home environment, allowing them to understand the patient's situation holistically, informing personalized care, and shifting the power dynamic to empower patients to live on their own terms.</p>
                         </div>
                     </div>
                 </div>
