Improve responsive control of overlay images in hero and contact sections
- Replace absolute-fill mixin with explicit positioning for hero__color-overlay and contact__shape-overlay
- Add responsive breakpoints for better control of overlay sizing and positioning
- Update contact background shape from WebP to SVG format
- Allow overlays to extend beyond viewport edges at specific breakpoints for improved visual design

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <section class="contact" id="contact">
             <div class="contact__background">
                 <img src="assets/images/contact-background.webp" alt="" class="contact__background-image">
-                <img src="assets/images/contact-background-shape.webp" alt="" class="contact__shape-overlay">
+                <img src="assets/images/contact-background-shape.svg" alt="" class="contact__shape-overlay">
                 <img src="assets/images/contact-people.webp" alt="" class="contact__people-image">
             </div>
             <div class="contact__content">
