--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="hero__content">
             <img src="assets/images/alliance-logo-white.png" alt="National Alliance for Care at Home" class="hero__logo">
             <h1 class="hero__title">Meet patients<br>where they are.</h1>
-            <p class="hero__subtitle">At home and along healthcare journeys, you can make a difference in their lives.</p>
+            <p class="hero__subtitle">Whether it’s supporting patients in their daily lives or finding a role that fits where you are in your career, care at home offers connection, purpose, and the freedom to grow.</p>
         </div>
     </section>
 
